// SPDX-License-Identifier: Apache-2.0
/**
 * Copyright (c) 2024  Panasonic Automotive Systems, Co., Ltd.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package dcm;
option go_package = "grpc/dcm;dcm";

service DcmService {
    rpc DcmGetExecutableAppList(Empty) returns (Response);
    rpc DcmGetAppStatus(AppControlRequest) returns (Response);
    rpc DcmGetRunningAppList(Empty) returns (Response);
    rpc DcmRunAppCommand(AppCommandRequest) returns (Response);
    rpc DcmRunApp(AppControlRequest) returns (Response);
    rpc DcmRunAppAsync(AppControlRequest) returns (Response);
    rpc DcmStopApp(AppControlRequest) returns (Response);
    rpc DcmStopAppAll(Empty) returns (Response);
    rpc DcmLaunchCompositor(Empty) returns (Response);
    rpc DcmLaunchCompositorAsync(Empty) returns (Response);
    rpc DcmStopCompositor(Empty) returns (Response);
}

message Empty {}

message AppCommandRequest {
    string app_json = 1;
}

message AppControlRequest {
    string app_name = 1;
}

message Response {
    string status = 1;
    string info = 2;
}
